--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "pytest>=7.4.0",
     "pytest-timeout>=2.1.0",
+    "selenium>=4.15.0",
+    "webdriver-manager>=4.0.0",
 ]
 
 [project.optional-dependencies]
